--- a/style.scss
+++ b/style.scss
@@ -77,7 +77,13 @@ body {
 			gap: 15px;
 			box-shadow: 1px 4px 4px 4px var(--black-shadow);
 
+			.input-wrapper {
+				width: 100%;
+				position: relative;
+			}
+
 			.input-field {
+				width: 100%;
 				padding: 20px 16px;
 				border-radius: 4px;
 				border: 1px solid var(--grayish-blue);
@@ -93,11 +99,33 @@ body {
 				}
 			}
 
-			.error {
-				display: none;
+			#eye {
+				width: 24px;
+				height: auto;
+				position: absolute;
+				right: -6px;
+				top: 50%;
+				transform: translate(-50%, -50%);
+				cursor: pointer;
 			}
 
-			#cliam-btn {
+			.input-error {
+				background: url(./images/icon-error.svg);
+				background-repeat: no-repeat;
+				background-size: 24px auto;
+				background-position: calc(100% - 30px);
+			}
+
+			.error {
+				display: none;
+				font-size: 12px;
+				font-weight: var(--fw-400);
+				color: var(--red);
+				margin-top: -10px;
+				text-align: center;
+			}
+
+			#claim-btn {
 				padding: 20px 16px;
 				background-color: var(--green);
 				color: var(--white);
@@ -123,6 +151,10 @@ body {
 				text-align: center;
 				letter-spacing: 0.05ch;
 
+				a {
+					text-decoration: none;
+				}
+
 				b {
 					color: var(--red);
 				}
@@ -141,5 +173,49 @@ footer {
 		font-size: 12px;
 		font-weight: var(--fw-400);
 		color: var(--white);
+	}
+}
+
+@media screen and (min-width: 1280px) {
+	body {
+		background: url(./images/bg-intro-desktop.png);
+		background-color: var(--red);
+	}
+
+	.container {
+		max-width: 1440px;
+		padding: 110px;
+		flex-direction: row;
+		align-items: center;
+
+		article {
+			max-width: 496px;
+
+			h1 {
+				font-size: 48px;
+				font-weight: var(--fw-700);
+				text-align: left;
+				line-height: 1.2;
+			}
+
+			p {
+				font-size: 18px;
+				font-weight: var(--fw-500);
+				text-align: left;
+				line-height: 1.5;
+			}
+		}
+
+		section {
+			width: 540px;
+
+			form {
+				padding: 44px;
+
+				.error {
+					text-align: right;
+				}
+			}
+		}
 	}
 }
